fix: add day buttons spacing
Buttons spacing may be customized using --fc-days-of-week-selector-button-space css variable

Close #15

--- a/src/main/resources/META-INF/frontend/styles/fc-days-of-week-selector-styles.css
+++ b/src/main/resources/META-INF/frontend/styles/fc-days-of-week-selector-styles.css
@@ -57,4 +57,6 @@ vaadin-horizontal-layout.fc-days-of-week-selector-buttons-layout {
 
 vaadin-context-menu-overlay vaadin-context-menu-list-box::part(items) {
     padding: 0 var(--lumo-space-xs);
+    display: inline-flex;
+    gap: var(--fc-days-of-week-selector-button-space, var(--lumo-space-m));
 }
